--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:id="@+id/registerActivityRoute">
 
         <ImageView
-            android:id="@+id/imgRegisterPhoto"
+            android:id="@+id/imgProfilePhoto"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="48dp"
@@ -32,7 +32,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgRegisterPhoto" />
+            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto" />
 
         <TextView
             android:id="@+id/txtRegisterMail"
@@ -45,7 +45,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgRegisterPhoto" />
+            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto" />
 
         <View
             android:id="@+id/viewRegisterMail"
