--- a/app/src/main/res/layout/fragment_share_gallery.xml
+++ b/app/src/main/res/layout/fragment_share_gallery.xml
@@ -71,17 +71,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
-        <ImageView
+        <FrameLayout
             android:id="@+id/imgShareGalleryImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_logo"
             app:layout_constraintBottom_toTopOf="@+id/gridViewShareGallery"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.6"
+            app:layout_constraintHeight_percent="0.7"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.naver.android.helloyako.imagecrop.view.ImageCropView
+                xmlns:imagecrop="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                imagecrop:outsideLayerColor="#99000000"
+                imagecrop:setInnerGridMode="on"
+                android:id="@+id/shareImageCropView"
+                android:visibility="gone"
+                imagecrop:gridInnerStroke="1dp"
+                imagecrop:gridInnerColor="#66ffffff"
+                imagecrop:setOuterGridMode="on"
+                imagecrop:gridOuterStroke="1dp"
+                imagecrop:gridOuterColor="#ffffff"/>
+
+            <com.universalvideoview.UniversalVideoView
+                android:id="@+id/shareUniversalVideoView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                app:uvv_autoRotation="true"
+                app:uvv_fitXY="false" />
+
+
+        </FrameLayout>
 
         <GridView
             android:id="@+id/gridViewShareGallery"
@@ -93,7 +117,7 @@
             android:verticalSpacing="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.4"
+            app:layout_constraintHeight_percent="0.3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgShareGalleryImage"></GridView>
     </androidx.constraintlayout.widget.ConstraintLayout>
